# pixiechess

./: .gitignore  README.md  training_instructions.md
PixieChess_GCP_Deployment/nnue/: train_gcp.sh
PixieChess_GCP_Deployment/pixie-engine-cpp/: build_wasm.bat  commands.txt  compile.bat  fen_tests.txt  test.js  test.sh  test.wasm  test_cmd.txt  test_limbo.cpp  test_split.cpp  uci_test.txt
PixieChess_GCP_Deployment/pixiechess-bot/: package.json  patch.cjs  run_puppeteer.js  test_full.ts  test_full_black.ts  test_warp.ts
PixieChess_GCP_Deployment/pixiechess-server/: deploy-vm.ps1  deploy.sh  package.json  test_check.js  test_check.ts
nnue/: train_nnue.py
pixie-engine-cpp/: CMakeLists.txt  build.sh  test.cpp  test_b.txt  test_board.cpp  test_fen.cpp  test_pfen.cpp
pixie-engine-cpp/nnue/: dataset_compiler.py  train_nnue.py
pixie-engine-cpp/src/: bitboard.h  board.cpp  evaluate.cpp  evaluate.h  main.cpp  movegen.cpp  movegen.h  nnue.h  pixiegen.cpp  pixiegen.h  rays.cpp  rays.h  search.cpp  wasm_bindings.cpp
pixiechess-bot/: index.html  package.json  test_cpp.cjs  test_crash.cjs  test_ischeck.ts  test_warp2.ts  test_wasm.ts  test_wasm2.ts
pixiechess-bot/public/: pixie_engine.js
pixiechess-bot/src/: App.tsx  index.css
pixiechess-bot/src/components/: ChessBoard.tsx  (+11 more)
pixiechess-server/: .dockerignore  Dockerfile  package.json  test_engine.ts  test_engine_fixed.ts  tsconfig.json
pixiechess-server/public/: index.html
pixiechess-server/scripts/: dataset.py  nginx.conf  requirements.txt  train.py  vm-setup.sh
pixiechess-server/src/: generate_training_data.ts  server.ts
(+97 files in other folders)
